# sts-python

./: .env  Dockerfile  LICENSE  README.md  alembic.ini  build_and_push.sh  config.json  config.py  image_processor.py  main.py  pyproject.toml  requirements.txt  storage_client.py
alembic/: env.py
alembic/versions/: 56286d60c53f_add_errors_counter.py  5a65299b659c_add_enum.py  7c36992bcdfa_add_enum.py  b9d83e1f03d1_add_enum.py  eac5f0be0f99_update_enum.py
app/: __init__.py  config.py  dependencies.py  main.py  models.py
app/alembic/: alembic.ini  env.py
app/alembic/versions/: 41a7c267a812_initial.py
app/healthcheck/: dependencies.py  routes.py  service.py
app/images/: buckets_service.py  dependencies.py  image_processor.py  models.py  routes.py  storage_client.py  thumbnail_service.py
app/stats/: dependencies.py  middleware.py  models.py  service.py
playground/: docker-compose.yaml  nginx.conf
src/sts/: __init__.py  __main__.py  config.py  constants.py  container.py  host.py  logs.py  main.py  models.py
src/sts/api/: hc.py  images.py
src/sts/bucket_management/: minio.py  service.py
src/sts/buckets/: minio.py  service.py
src/sts/config/: __init__.py  auth.py  buckets_map.py  loader.py  models.py
src/sts/file_storage/: client.py  minio_client.py  minio_scanner.py  scanner.py
src/sts/healthcheck/: dependencies.py  reader.py  routes.py  service.py  writer.py
src/sts/images/: buckets_service.py  (+11 more)
src/tests/: file_storage_scanner_test.py  image_processor_test.py  storage_client_test.py
stress_tests/: tasks.py
tests/: app_settings_test.py  config.json  file_storage_scanner_test.py  image_processor_test.py  lock_manager_test.py  storage_client_test.py  storage_response_test.py
tests/file_storage/: test_client.py  test_scanner.py
tests/images/: test_processor.py
tests/security/: test_authenticator.py  test_off_jwt_verifier.py  test_oidc_jwt_verifier.py  test_token_extractor.py
(+20 files in other folders)
