[tool.poetry]
name = "sts"
version = "1.2.0"
description = "Simple thumbnail service"
authors = ["Nikita Sakhno <adream74@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.13.1"
fastapi = "==0.115.6"
loguru = "==0.7.3"
minio = "==7.2.13"
pillow = "==11.1.0"
pydantic = "==2.10.4"
pydantic-settings = "==2.7.1"
poetry-core = "^1.9.1"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
