[tool.poetry]
name = "sts"
version = "1.2.0"
description = "Simple thumbnail service"
authors = ["Nikita Sakhno <adream74@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.13.2"
fastapi = "==0.115.11"
loguru = "==0.7.3"
minio = "==7.2.15"
pillow = "==11.1.0"
pydantic = "==2.10.6"
pydantic-settings = "==2.8.1"
poetry-core = "^2.1.1"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.4"
mypy = "==1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
