[tool.poetry]
name = "sts"
version = "2.0.2"
description = "Simple thumbnail service"
authors = ["Nikita Sakhno <adream74@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.13.12"
fastapi = "==0.115.12"
loguru = "==0.7.3"
minio = "==7.2.15"
pillow = "==11.2.1"
pydantic = "==2.11.3"
pydantic-settings = "==2.9.1"
poetry-core = "==2.4.0"
uvicorn = "==0.34.2"
dishka = "==1.5.3"
urllib3 = "^2.7.0"
pyjwt = { extras = ["crypto"], version = "^2.13.0" }

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.4"
mypy = "==1.14.1"
pyrefly = "==1.0.0"
magicmock = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
